--- a/GUI&Oracle/src/web/Ex01_HTML_tag/tagEx_09.html
+++ b/GUI&Oracle/src/web/Ex01_HTML_tag/tagEx_09.html
@@ -2,32 +2,80 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Inse1rt title here</title>
+<title>Insert title here</title>
+
+
 </head>
+
 <body>
 
 <div>
 
-<form action="#" method='get'>
 
+ <form action="#" method="get"> 
+	
+	<label>
+		이름 :
+		<input type="text" name="name"/> 
+	</label>
+	<br><br>
+	<label for="uid">아이디 : </label>
+	<input type="text" id="uid" size="10" name="userid"
+			placeholder="아이디 입력" />
+	<br><br>
+
+	<label for="userPwd">패스워드 : </label>
+	<input type="password" id="userPwd" name="userPwd" 
+			placeholder="패스워드 입력"/>
+	<br><br>
+	
+	<label for="chkBox">체크1</label>
+	<input type="checkbox" id="chkBox" name="chkBox" />
+	<label for="chkBox">체크2</label>
+	<!-- 체크 되어있으면 name=on 으로 데이터 전송 -->
+	<!-- 체크 해제되어있으면 변수가 아예 전송되지 않음 -->
+	<br><br>
+	
+	<input type="radio" name="gender" value="m" 
+		checked = "checked" />남
+	<input type="radio" name="gender" value="f" />여
+	<input type="radio" name="aaa" value="o" />기타
+	<!-- type ="radio"의 name이 같으면 라디오 그룹으로 적용된다 -->
+	<!-- 전송되는 데이터는 value의 값을 전송 -->
+	<!-- 아무것도 선택되지 않으면 변수를 생성하지 않음 -->
+	<br><br>
+	
+	<input type="button" id="btnOk" value="확인" 
+		onclick="alert('확인버튼눌림');"/>
+	
+	<input type="reset" value="초기화"/>	
+	<input type="submit" value="전송"/>
+		
+	<input type="hidden" name="hiddenData" value="안보임" />
+	
+	<!-- 컬러 picker, #0000FF = BLUE -->
+	<input type="color" name="color" value="#0000FF" />
+	<br><br>
+	
+	<input type="date" name="date" value="2017-05-03" />
+	<br><br>
+	
+	<!-- 수치 범위 선택 -->
+	<input type="range" name="range" min="100" max="500" value="300" />
+	<br><br>
+	
+	<!-- 사파리 브라우저에서만 동작함 -->
+	<input type="tel" name="tel" />
+	<br><br>
+
+	<input type="file" name="file" />
+	
 </form>
+
 
 </div>
 
+
+
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
