--- a/GUI&Oracle/src/web/Ex09_JS_Dom/jsDom_01.html
+++ b/GUI&Oracle/src/web/Ex09_JS_Dom/jsDom_01.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
+<!-- 
+ + 자바스크립트 핵심 요소 4가지
+	1. 자바스크립트 Core 문법
+		기본문법
+		데이터타입, 변수, 제어문, 함수, ...
+		클래스, 객체, ...
+		내장 객체(Core 라이브러리)
+		String, Date, Math, Array, Number, Object, ...
+
+	2. BOM, Browser Object Model, 브라우저 객체 모델
+		웹 브라우저의 창 또는 프레임과 자바스크립트가 통신하기
+		위한 수단으로 제공되는 객체들
+		window객체 ( BOM 최상위 객체 )
+		- 브라우저 전반적인 기능 제어
+		- 타이머 함수
+		navigator객체
+		- 브라우저와 운영체제 정보
+		- 연계 GPS 정보(위치정보)
+		location객체
+		- 주소정보(URL)
+		history객체
+		- 페이지 방문기록
+		document객체
+		- 웹페이지 문서 ( 주로 <body>태그 )
+		screen객체
+		- 화면정보
+-->
+ 
+
 <html>
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+
 <script type="text/javascript">
 
-//window.open("http://www.naver.com");
+// window.open("http://www.naver.com");
 open("http://www.naver.com");
 
 var num = 123;
-// console.log(window.num);
-console.log(num);
+// console.log( window.num );
+console.log( num );
 
 // window.close(); //창닫기
 
@@ -18,8 +48,17 @@ console.log("-----");
 console.log(screen.availWidth);
 
 </script>
+
 </head>
 <body>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
