--- a/GUI&Oracle/src/web/Ex10_JS_Event/jsEvent_01.html
+++ b/GUI&Oracle/src/web/Ex10_JS_Event/jsEvent_01.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
+
+<!-- 
+	4. Event, 이벤트
+	+ JS Event Listener 등록하는 방법
+		1. HTML 인라인 방식(onXXXX 속성을 이용한다)
+			ex) <h1 onclick="alert('HI');"> Hello </h1>
+		2. DOM을 이용한 바인딩 ver1 - Event Attribute 사용
+			ex)		var e = document.getElementById("btn");
+					e.onclick = function() {
+						alert("HI");
+					};
+		3. DOM을 이용한 바인딩 ver2 - addEventListener() 함수 사용
+			ex)
+					var e = document.getElementById("btn");
+					e.addEventListener("click", function() {
+						alert("HELLO");
+					});
+ -->
+
 <html>
 <head>
 <meta charset="UTF-8">
