--- a/GUI&Oracle/src/web/Ex11_jQuery/jQuery_07.html
+++ b/GUI&Oracle/src/web/Ex11_jQuery/jQuery_07.html
@@ -11,10 +11,10 @@
 
 $(document).ready(function() {
 
-// 	$("div").children()
-// 		.css("border", "1px solid blue");
-// 	$("div").children(".strong")
-// 		.css("border", "1px solid red");
+	$("div").children()
+		.css("border", "1px solid blue");
+	$("div").children(".strong")
+		.css("border", "1px solid red");
 
 // 	$(".strong").parent()
 // 		.css("border", "1px solid blue");
@@ -33,8 +33,8 @@ $(document).ready(function() {
 // 	$(".strong").prevAll()
 // 		.css("border", "1px solid #ccc");
 
-	$(".strong").nextAll()
-		.css("border", "1px solid #ccc");
+// 	$(".strong").nextAll()
+// 		.css("border", "1px solid #ccc");
 });
 
 </script></head><body>
